@@ -142,10 +142,8 @@ is_deeply [$bar->message], [
   '... or all messages of of the state if called in list context';
 
 can_ok $fsa, 'stacktrace';
-SKIP: {
-    skip 'Data::Dumper segfaults on Perl 5.6' if $] < 5.008;
-    my $stacktrace = $fsa->stacktrace;
-    is $stacktrace, <<"END_TRACE", '... and it should return a human readable trace';
+my $stacktrace = $fsa->stacktrace;
+is $stacktrace, <<"END_TRACE", '... and it should return a human readable trace';
 State: foo
 {
   message => undef,
@@ -171,7 +169,6 @@ State: foo
 }
 
 END_TRACE
-}
 
 can_ok $fsa, 'raw_stacktrace';
 my $expected = [
